--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
     <p>(Mogą nie znajdować się jeszcze na GitHubie)</p>
     <div class="subnav">
       <a href="#" onclick="openOngoingSubTab('ongoing1')">Mini gra</a>
-      <a href="#" onclick="openOngoingSubTab('ongoing2')">Wykrywanie obiektu</a>
-      <a href="#" onclick="openOngoingSubTab('ongoing3')">Program do screenów</a>
+      <a href="#" onclick="openOngoingSubTab('ongoing2')">Program do Screenów</a>
+      <a href="#" onclick="openOngoingSubTab('ongoing3')">Wykrywanie obiektu</a>
       <a href="#" onclick="openOngoingSubTab('ongoing4')">4</a>
       <a href="#" onclick="openOngoingSubTab('ongoing5')">5</a>
     </div>
@@ -235,6 +235,7 @@
         <source src="wykrywanie_w_cs2.mp4" type="video/mp4">
         Twój przeglądarka nie obsługuje wideo HTML5.
       </video>
+      <a href="wykrywanie_w_cs2.mp4" download>Pobierz nagranie (MP4)</a>
     </div>
 
     <div id="ongoing4" class="subtabcontent">
